unpackaged/main/default/objects/litify_pm__Insurance__c/litify_pm__Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <label>Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>