unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_ext__Adjuster_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Adjuster_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjuster (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>