unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_ext__Insurance_Company_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Insurance_Company_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurances (Insurance Company (Party))</relationshipLabel>
    <relationshipName>Insurances1</relationshipName>
    <type>Lookup</type>
</CustomField>