unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_ext__Policy_Holder_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Policy_Holder_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Holder (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurances (Policy Holder (Party))</relationshipLabel>
    <relationshipName>Insurances2</relationshipName>
    <type>Lookup</type>
</CustomField>