unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_ext__Subrogation_Agency_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Subrogation_Agency_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subrogation Agency (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurances (Subrogation Agency (Party))</relationshipLabel>
    <relationshipName>Insurances3</relationshipName>
    <type>Lookup</type>
</CustomField>