unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Adjuster_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Adjuster_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(litify_pm__Adjuster__c)), 

HYPERLINK(&quot;/&quot;+ litify_pm__Adjuster__r.Id  ,  litify_pm__Adjuster__r.litify_pm__Party_Name__c  ,&quot;_self&quot;) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjuster Name</label>
    <type>Text</type>
</CustomField>