unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Combined_Single_Limits__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Combined_Single_Limits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Combined Single Limits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>