unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Coverages__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Coverages__c</fullName>
    <label>Coverages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>UM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>