unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>