unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>