unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__lit_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Per_Person__c</fullName>
    <label>Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>