unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Policy_Holder_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(litify_pm__Policy_Holder__c)), 

HYPERLINK(&quot;/&quot;+ litify_pm__Policy_Holder__r.Id  ,   litify_pm__Policy_Holder__r.litify_pm__Party_Name__c   ,&quot;_self&quot;) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Holder Name</label>
    <type>Text</type>
</CustomField>