unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>