unpackaged/main/default/objects/litify_pm__Insurance__c/fields/litify_pm__Subrogation_Agency__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Subrogation_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subrogation Agency</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>Only roles related to this matter can be associated with this record.</errorMessage>
        <filterItems>
            <field>$Source.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Role__c.litify_pm__Matter__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__Matter__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__Intake__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Role__c.litify_pm__Intake__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__Intake__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Insurances (Subrogation Agency)</relationshipLabel>
    <relationshipName>Insurances2</relationshipName>
    <type>Lookup</type>
</CustomField>