unpackaged/main/default/objects/litify_pm__Insurance__c/recordTypes/litify_pm__Health.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Health</fullName>
    <active>true</active>
    <label>Health</label>
</RecordType>