unpackaged/main/default/objects/litify_pm__Insurance__c/recordTypes/litify_pm__Liability.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Liability</fullName>
    <active>true</active>
    <label>Liability</label>
</RecordType>